# UP-2021-tasks

./: .gitignore  CMakeLists.txt  README.md  main.cpp
2D_arrays/: 2D_arrays.cpp  2D_arrays_exercise.cpp
arrays/: arrays_geri.cpp
exam/: group3_5MI0800128_prob1.cpp  group3_5MI0800128_prob2.cpp
exam_preparation/: exam_preparation.cpp  exam_preparation1.cpp  exam_preparation2.cpp  exam_preparation4.cpp  exam_prepatation3.cpp
functions/: functions.cpp
homework1/: homework1.cpp
homework2/: group3_5MI0800128_homework2.cpp
kontrolno2/: group3_fn5MI0800128_prob1.cpp  group3_fn5MI0800128_prob2.cpp  group3_fn5MI0800128_prob3.cpp
kontrolno_zad3/: task3.cpp
pointers/: pointers_with_arrays1.cpp  pointers_with_arrays2.cpp
preparation/: tasks_for_practise1.cpp
recursion/: recursion_practicum.cpp
strings_and_char_arrays/: strings_and_chars.cpp  strings_and_chars2.cpp  tasks_exercise_for_exam.cpp
