cmake_minimum_required(VERSION 3.20)
project(UP_2021_tasks)

set(CMAKE_CXX_STANDARD 14)
# When executing a program make sure all the others are commented

#add_executable(UP_2021_tasks homework1/homework1.cpp )
#add_executable(UP_2021_tasks  pointers/pointers_with_arrays1.cpp)
#add_executable(UP_2021_tasks kontrolno_zad3/task3.cpp)
#add_executable(UP_2021_tasks functions/functions.cpp)
#add_executable(UP_2021_tasks 2D_arrays/2D_arrays.cpp )
#add_executable(UP_2021_tasks strings_and_char_arrays/strings_and_chars.cpp )
#add_executable(UP_2021_tasks pointers/pointers_with_arrays2.cpp)
#add_executable(UP_2021_tasks strings_and_char_arrays/strings_and_chars2.cpp)
add_executable(UP_2021_tasks 2D_arrays/2D_arrays_exercise.cpp)
