cmake_minimum_required(VERSION 3.20)
project(UP_2021_tasks)

set(CMAKE_CXX_STANDARD 14)
# When executing a program make sure all the others are commented

#add_executable(UP_2021_tasks homework1/homework1.cpp )
#add_executable(UP_2021_tasks  pointers/pointers_with_arrays1.cpp)
#add_executable(UP_2021_tasks kontrolno_zad3/task3.cpp)
#add_executable(UP_2021_tasks functions/functions.cpp)
#add_executable(UP_2021_tasks 2D_arrays/2D_arrays.cpp )
#add_executable(UP_2021_tasks strings_and_char_arrays/strings_and_chars.cpp )
#add_executable(UP_2021_tasks pointers/pointers_with_arrays2.cpp)
#add_executable(UP_2021_tasks strings_and_char_arrays/strings_and_chars2.cpp)
#add_executable(UP_2021_tasks 2D_arrays/2D_arrays_exercise.cpp)
#add_executable(UP_2021_tasks preparation/tasks_for_practise1.cpp)
#add_executable(UP_2021_tasks homework2/group3_5MI0800128_homework2.cpp)
#add_executable(UP_2021_tasks kontrolno2/zadacha1.cpp )
#add_executable(UP_2021_tasks kontrolno2/zadacha2.cpp)
#add_executable(UP_2021_tasks kontrolno2/group3_fn5MI0800128_prob3.cpp)
#add_executable(UP_2021_tasks main.cpp)
#add_executable(UP_2021_tasks strings_and_char_arrays/tasks_exercise_for_exam.cpp)
#add_executable(UP_2021_task recursion/recursion_practicum.cpp)
# ЕКЗАЛТАЦИЯ ПРЕДИ ИЗПИТА:
#add_executable(UP_2021_task exam_preparation/exam_preparation.cpp)
#add_executable(UP_2021_task exam_preparation/examp_preparation1.cpp)
#add_executable(UP_2021_task exam_preparation/exam_preparation2.cpp)
#add_executable(UP_2021_task exam_preparation/exam_prepatation3.cpp)
#add_executable(UP_2021_task exam_preparation/exam_preparation4.cpp )
#add_executable(UP_2021_task exam/group3_5MI0800128_prob1.cpp)
#add_executable(UP_2021_task exam/group3_5MI0800128_prob2.cpp)
add_executable(UP_2021_task arrays/arrays_geri.cpp)